# channel_decoding

./: README.md
LAB1/: LUT_table.txt  generate_answers.py
LAB1/coding/: ELE-32_lab1.py  LUT_table.txt  lab1.py  part2.py  part2_extra.py  plotlab1.py
LAB2/: bsc.m  calculate_d_min.m  cycle_decoder.m  data.mat  determine_n_k.m  hamming_decoder.m  hamming_encoder.m  main.m  sindrom_gen.m
LAB3/projeto/: LAB3 - Atalho.lnk  comparison.py  encoder.py  encoder_2.py  encoder_3.py  main.py  main.spec  main2.py  test.py
LAB3/vasconsa/lab03clean/: CMakeLists.txt  labvariacao1.c
